--- a/Projects/Final Project/model_train.ipynb
+++ b/Projects/Final Project/model_train.ipynb
@@ -94,7 +94,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 定义CNN模型结构\n",
     "def build_model():\n",
     "    model = Sequential([\n",
     "        Conv2D(32, (3, 3), activation='relu', input_shape=(224, 224, 3)),\n",
@@ -123,15 +122,11 @@
    "outputs": [],
    "source": [
     "class MyThresholdCallback(Callback):\n",
-    "    \"\"\"\n",
-    "    自定义回调，用于在达到指定的准确率阈值时停止训练。\n",
-    "    \"\"\"\n",
     "    def __init__(self, threshold):\n",
     "        super(MyThresholdCallback, self).__init__()\n",
     "        self.threshold = threshold  # 准确率阈值\n",
     "\n",
     "    def on_epoch_end(self, epoch, logs=None):\n",
-    "        # 检查验证集的准确率（也可以改为 'accuracy' 检查训练集准确率）\n",
     "        if logs.get('accuracy') >= self.threshold:\n",
     "            print(f\"\\n达到 {self.threshold*100}% 准确率，停止训练！\")\n",
     "            self.model.stop_training = True"
@@ -144,16 +139,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 设置日志目录\n",
     "log_dir = \"logs/fit/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
     "tensorboard_callback = TensorBoard(log_dir=log_dir, histogram_freq=1)\n",
     "\n",
     "model = build_model()\n",
     "\n",
-    "threshold_callback = MyThresholdCallback(threshold=0.975)\n",
-    "\n",
-    "# 设置EarlyStopping回调\n",
-    "# early_stopping_callback = EarlyStopping(monitor='accuracy', patience=5, verbose=1, mode='max', restore_best_weights=True)"
+    "threshold_callback = MyThresholdCallback(threshold=0.975)"
    ]
   },
   {
@@ -203,11 +194,11 @@
    "source": [
     "history = model.fit(\n",
     "    train_generator,\n",
-    "    steps_per_epoch=100,  # 根据您的数据集大小可能需要调整\n",
-    "    epochs=15,            # 根据模型的表现可能需要调整\n",
+    "    steps_per_epoch=100,  \n",
+    "    epochs=15,           \n",
     "    validation_data=validation_generator,\n",
-    "    validation_steps=50,   # 根据您的数据集大小可能需要调整\n",
-    "    callbacks=[threshold_callback]  # 在训练时使用回调\n",
+    "    validation_steps=50,   \n",
+    "    callbacks=[threshold_callback] \n",
     ")"
    ]
   },
